# spookyhash

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  azure-pipelines.yml  pyproject.toml  requirements.in  requirements.txt  setup.py  spookyhash.py
.github/workflows/: test.yml  wheels.yml
src/: SpookyV2.pxd  spookyhash.pyx
tests/: test_readme.py  test_release.py  test_spooky_hash.py
