[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cython"
]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Alen Buhanec", email = "alen.buhanec@gmail.com"}]
name = "spookyhash"
description = "A Python wrapper for SpookyHash version 2"
readme = "README.md"
keywords = ["SpookyHash", "hashlib"]
license = {text = "MIT"}
classifiers = [
    "Topic :: Software Development :: Libraries",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/buhanec/spookyhash"
Repository = "https://github.com/buhanec/spookyhash"
Issues = "https://github.com/buhanec/spookyhash/issues"

[project.optional-dependencies]
test = ["pytest", "hypothesis"]

[tool.setuptools]
py-modules = ["spookyhash"]

[tool.setuptools.dynamic]
version = {attr = "spookyhash.__version__"}
